// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkPaginationNudger should display backward nudger 1`] = `
<DocumentFragment>
  <div
    class="bpk-pagination-nudger"
  >
    <button
      class="bpk-button bpk-button--icon-only bpk-button--link bpk-button--link--icon-only"
      data-backpack-ds-component="Button"
      type="button"
    >
      <span
        style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          aria-hidden="true"
          class="bpk-icon--rtl-support"
          height="1rem"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.75 16.537V7.463a1.358 1.358 0 0 0-2.251-1.11l-4.77 4.354a1.53 1.53 0 0 0-.04 2.184l4.77 4.718a1.357 1.357 0 0 0 2.291-1.072"
          />
        </svg>
      </span>
      <span
        class="bpk-pagination-nudger__text--hidden"
      >
        previous
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPaginationNudger should display forward nudger 1`] = `
<DocumentFragment>
  <div
    class="bpk-pagination-nudger"
  >
    <button
      class="bpk-button bpk-button--icon-only bpk-button--link bpk-button--link--icon-only"
      data-backpack-ds-component="Button"
      type="button"
    >
      <span
        style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
      >
        <svg
          aria-hidden="true"
          class="bpk-icon--rtl-support"
          height="1rem"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.25 7.463v9.074a1.358 1.358 0 0 0 2.251 1.11l4.77-4.354a1.53 1.53 0 0 0 .04-2.184l-4.77-4.718A1.357 1.357 0 0 0 8.25 7.463"
          />
        </svg>
      </span>
      <span
        class="bpk-pagination-nudger__text--hidden"
      >
        next
      </span>
    </button>
  </div>
</DocumentFragment>
`;
